welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: illegal start of simple expression
		if (j%2!=0) var y=1
                            ^